--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-crypto-bigint = "0.5.1"
+crypto-bigint = { git = "https://github.com/ycscaly/crypto-bigint.git", branch = "all", features = ["cross-size", "rand"] }
 merlin = "3.0.0"
 rand_core = "0.6.4"
 
@@ -14,7 +14,6 @@ rand_core = "0.6.4"
 curv-kzen = { version = "0.10.0", features = ["rust-gmp-kzen"]}
 criterion = { version = "0.4", features = ["html_reports"] }
 elliptic-curve = { version = "0.13.4", features = ["arithmetic", "group"] }
-crypto-bigint = "0.5.1"
 fiat-crypto = "0.1.20"
 k256 = "0.13.1"
 num-traits = "0.2.15"
