Defined types for N, N2, Kappa, Kappa2 and RingElement. Defined & implemented AsNaturalNumber and AsRingElement traits.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+crypto-bigint = { git = "https://github.com/ycscaly/crypto-bigint.git", rev = "e4dc74c", features = ["extra-trait-impls", "rand"] }
 
 [dev-dependencies]
