Serde support + documentation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-crypto-bigint = { git = "https://github.com/ycscaly/crypto-bigint.git", rev = "e4dc74c", features = ["extra-trait-impls", "rand"] }
+crypto-bigint = { git = "https://github.com/ycscaly/crypto-bigint.git", rev = "e4dc74c", features = ["extra-trait-impls", "rand", "serde"] }
 merlin = "3.0.0"
 rand_core = "0.6.4"
+serde = "1.0.163"
 
 [dev-dependencies]
 criterion = { version = "0.4", features = ["html_reports"] }
