--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,7 @@ edition = "2021"
 
 [dependencies]
 crypto-bigint = { git = "https://github.com/ycscaly/crypto-bigint.git", rev = "ba4bf87", features = ["extra-trait-impls", "rand_core", "serde"], default-features = false }
-merlin = "3.0.0"
-rand_core = "0.6.4"
+merlin = { version = "3.0.0", default-features = false }
 serde = "1.0.163"
 
 [dev-dependencies]
