--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,3 +104,23 @@ jobs:
         with:
           command: doc
           args: --no-deps --document-private-items --all-features --examples
+
+  benchmarks:
+    name: Benchmarks
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Install Rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+          profile: minimal
+          override: true
+          components: bench
+      - uses: Swatinem/rust-cache@v2
+      - uses: actions-rs/cargo@v1
+        name: Run Benchmarks
+        with:
+          command: bench
+          args: --all-features
