--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,126 +1,126 @@
-#name: CI
-#
-#on:
-#  push:
-#    branches:
-#      - main
-#  pull_request:
-#  workflow_dispatch:
-#
-#jobs:
-#  build:
-#    runs-on: ubuntu-latest
-#    strategy:
-#      matrix:
-#        target:
-#          - x86_64-unknown-linux-gnu
-#          - wasm32-unknown-unknown
-#    steps:
-#      - name: Checkout repository
-#        uses: actions/checkout@v3
-#      - name: Install Rust toolchain
-#        uses: dtolnay/rust-toolchain@master
-#        with:
-#          toolchain: nightly
-#          targets: ${{ matrix.target }}
-#      - run: cargo build --target ${{ matrix.target }} --release
-#
-#  test:
-#    name: Test Suite
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout repository
-#        uses: actions/checkout@v3
-#      - name: Install Rust toolchain
-#        uses: actions-rs/toolchain@v1
-#        with:
-#          toolchain: nightly
-#          profile: minimal
-#          override: true
-#          components: rustfmt
-#      - uses: Swatinem/rust-cache@v2
-#      - uses: actions-rs/cargo@v1
-#        with:
-#          command: test
-#          args: --all-features --release
-#
-#  rustfmt:
-#    name: Rustfmt
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout repository
-#        uses: actions/checkout@v3
-#      - name: Install Rust toolchain
-#        uses: actions-rs/toolchain@v1
-#        with:
-#          toolchain: nightly
-#          profile: minimal
-#          override: true
-#          components: rustfmt
-#      - uses: Swatinem/rust-cache@v2
-#      - name: Check formatting
-#        uses: actions-rs/cargo@v1
-#        with:
-#          command: fmt
-#          args: --all -- --check
-#
-#  clippy:
-#    name: Clippy
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout repository
-#        uses: actions/checkout@v3
-#      - name: Install Rust toolchain
-#        uses: actions-rs/toolchain@v1
-#        with:
-#          toolchain: nightly
-#          profile: minimal
-#          override: true
-#          components: clippy
-#      - uses: Swatinem/rust-cache@v2
-#      - name: Clippy check
-#        uses: actions-rs/cargo@v1
-#        with:
-#          command: clippy
-#          args: --all-targets --all-features -- -D warnings
-#
-#  docs:
-#    name: Docs
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout repository
-#        uses: actions/checkout@v3
-#      - name: Install Rust toolchain
-#        uses: actions-rs/toolchain@v1
-#        with:
-#          toolchain: nightly
-#          profile: minimal
-#          override: true
-#      - uses: Swatinem/rust-cache@v2
-#      - name: Check documentation
-#        env:
-#          RUSTDOCFLAGS: -D warnings
-#        uses: actions-rs/cargo@v1
-#        with:
-#          command: doc
-#          args: --no-deps --document-private-items --all-features --examples
-#
-#  benchmarks:
-#    if: github.event_name != 'pull_request'
-#    name: Benchmarks
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout repository
-#        uses: actions/checkout@v3
-#      - name: Install Rust toolchain
-#        uses: actions-rs/toolchain@v1
-#        with:
-#          toolchain: nightly
-#          profile: minimal
-#          override: true
-#      - uses: Swatinem/rust-cache@v2
-#      - uses: actions-rs/cargo@v1
-#        name: Run Benchmarks
-#        with:
-#          command: bench
-#          args: --all-features
+name: CI
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+  workflow_dispatch:
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        target:
+          - x86_64-unknown-linux-gnu
+          - wasm32-unknown-unknown
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: nightly
+          targets: ${{ matrix.target }}
+      - run: cargo build --target ${{ matrix.target }} --release
+
+  test:
+    name: Test Suite
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Install Rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+          profile: minimal
+          override: true
+          components: rustfmt
+      - uses: Swatinem/rust-cache@v2
+      - uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --all-features --release
+
+  rustfmt:
+    name: Rustfmt
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Install Rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+          profile: minimal
+          override: true
+          components: rustfmt
+      - uses: Swatinem/rust-cache@v2
+      - name: Check formatting
+        uses: actions-rs/cargo@v1
+        with:
+          command: fmt
+          args: --all -- --check
+
+  clippy:
+    name: Clippy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Install Rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+          profile: minimal
+          override: true
+          components: clippy
+      - uses: Swatinem/rust-cache@v2
+      - name: Clippy check
+        uses: actions-rs/cargo@v1
+        with:
+          command: clippy
+          args: --all-targets --all-features -- -D warnings
+
+  docs:
+    name: Docs
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Install Rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+          profile: minimal
+          override: true
+      - uses: Swatinem/rust-cache@v2
+      - name: Check documentation
+        env:
+          RUSTDOCFLAGS: -D warnings
+        uses: actions-rs/cargo@v1
+        with:
+          command: doc
+          args: --no-deps --document-private-items --all-features --examples
+
+  benchmarks:
+    if: github.event_name != 'pull_request'
+    name: Benchmarks
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Install Rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+          profile: minimal
+          override: true
+      - uses: Swatinem/rust-cache@v2
+      - uses: actions-rs/cargo@v1
+        name: Run Benchmarks
+        with:
+          command: bench
+          args: --all-features
