--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ serde = { version = "1.0.163", features = ["derive"] }
 
 rayon = { version = "1.7.0", optional = true }
 
+thiserror = "1.0.40"
+
 # For benchmarking
 criterion = { version = "0.4", features = ["html_reports"], optional = true }
 rand_core = { version = "0.6.4", features = ["std"], optional = true }
