--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ merlin = { version = "3.0.0", default-features = false }
 serde = { version = "1.0.163", features = ["derive"] }
 thiserror = "1.0.40"
 
+rayon = { version = "1.7.0", optional = true }
+
 # For benchmarking
 criterion = { version = "0.5", features = ["html_reports"], optional = true }
 rand_core = { version = "0.6.4", features = ["std"], optional = true }
@@ -17,6 +19,8 @@ rand_core = { version = "0.6.4", features = ["std"], optional = true }
 rand_core = { version = "0.6.4", features = ["std"] }
 
 [features]
+parallel = ["dep:rayon"]
+
 # This feature is for internal-use only (for benchmarking) and exists due to limitations of benchmarking non-public functions in Rust.
 # There will be no SemVer support for this feature.
 benchmarking = ["dep:criterion", "dep:rand_core"]
