--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,17 +15,19 @@ rayon = { version = "1.7.0", optional = true }
 # For benchmarking
 criterion = { version = "0.5", features = ["html_reports"], optional = true }
 rand_core = { version = "0.6.4", features = ["std"], optional = true }
+rand = { version = "0.8.5", optional = true }
 
 [dev-dependencies]
 rand_core = { version = "0.6.4", features = ["std"] }
 rstest = "0.17.0"
+rand = "0.8.5"
 
 [features]
 parallel = ["dep:rayon"]
 
 # This feature is for internal-use only (for benchmarking) and exists due to limitations of benchmarking non-public functions in Rust.
 # There will be no SemVer support for this feature.
-benchmarking = ["dep:criterion", "dep:rand_core", "parallel"]
+benchmarking = ["dep:criterion", "dep:rand_core", "dep:rand", "parallel"]
 
 [[bench]]
 name = "benches"
