.github/workflows: change self hosted benchmark timeout

--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   benchmarks:
     name: Benchmarks
+    timeout-minutes: 10080
     runs-on: self-hosted
     steps:
       - name: Checkout repository
