--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "tiresias"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
-license = "Apache-2.0"
+license = "BSD-3-Clause-Clear"
 
 [dependencies]
 crypto-bigint = { version = "0.5.5", features = ["rand_core", "serde", "alloc"], default-features = false }
