--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 license = "BSD-3-Clause-Clear"
 
 [dependencies]
-group = { git = "https://github.com/dwallet-labs/group.git", branch = "additive" }
+group = { git = "https://github.com/dwallet-labs/group.git" }
 homomorphic-encryption = { git = "https://github.com/dwallet-labs/homomorphic-encryption.git", branch = "decryption_key_share" }
 crypto-bigint = { version = "0.5.5", features = ["rand_core", "serde", "alloc"], default-features = false }
 merlin = { version = "3.0.0", default-features = false }
