--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,10 +20,11 @@ rayon = { version = "1.7.0", optional = true }
 criterion = { version = "0.5", features = ["html_reports"], optional = true }
 rand_core = { version = "0.6.4", features = ["std"], optional = true }
 rand = { version = "0.8.5", optional = true }
+rstest = { version = "0.18", optional = true }
 
 [dev-dependencies]
 rand_core = { version = "0.6.4", features = ["std"] }
-rstest = "0.18.1"
+rstest = "0.18"
 rand = "0.8.5"
 
 [features]
@@ -33,7 +34,7 @@ parallel = ["dep:rayon"]
 # limitations of benchmarking non-public functions, and exposing test functions in Rust.
 # There will be no SemVer support for these features.
 benchmarking = ["dep:criterion", "dep:rand_core", "dep:rand", "parallel"]
-test_exports = ["dep:rand_core", "dep:rand"]
+test_exports = ["dep:rand_core", "dep:rand", "dep:rstest"]
 
 [[bench]]
 name = "benches"
