--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ merlin = { version = "3.0.0", default-features = false }
 serde = { version = "1.0.163", features = ["derive"] }
 thiserror = "1.0.40"
 gcd = "2.3.0"
+crypto-primes = { version = "0.5.0", default-features = false }
 
 rayon = { version = "1.7.0", optional = true }
 
